--- a/_publications/2018-11-10-Nanjing.md
+++ b/_publications/2018-11-10-Nanjing.md
@@ -2,7 +2,7 @@
 title: "Zero Defect Manufacturing of Microsemiconductors–An Application of Machine Learning and Artificial Intelligence"
 collection: publications
 permalink: /publication/2018-11-10-Nanjing
-excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
+# excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2018-11-10
 venue: '2018 5th International Conference on Systems and Informatics (ICSAI'
 paperurl: http://vcangadi1.github.io/files/Nanjing.pdf
