--- a/_publications/APL2017.md
+++ b/_publications/APL2017.md
@@ -5,7 +5,7 @@ permalink: /publication/APL2017
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2017-05-29
 venue: 'Applied Physics Letters'
-# paperurl: 'http://vcangadi1.github.io/files/APL2017.pdf'
+# paperurl: 'https://doi.org/10.1063/1.4984237'
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
 citation: '<b>V. C. Angadi</b>, F. Benz, I. Tischer, K. Thonke, T. Aoki and T. Walther (2017), &quot;Evidence of terbium and oxygen co-segregation in annealed AlN: Tb&quot; <i>Applied Physics Letters</i>, 110(22), pp. 222102.'
 ---
