--- a/_publications/IEEE2012.md
+++ b/_publications/IEEE2012.md
@@ -4,7 +4,8 @@ collection: publications
 permalink: /publication/IEEE2012
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2012-03-01
-venue: '2012 IEEE Students Conference on Electrical Electronics and Computer Science, Bhopal, India'
+#venue: '2012 IEEE Students Conference on Electrical Electronics and Computer Science (SCEECS), Bhopal, India'
+venue: 'SCEECS'
 # paperurl: 'https://doi.org/10.1109/SCEECS.2012.6184847'
 # citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal of Materials Research</i>. 1(2).'
 citation: 'M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students' Conference on Electrical, Electronics and Computer Science</i>, Bhopal, India, pp. 1-4.'
@@ -13,4 +14,4 @@ Watermarking is a technique of embedding hidden information in multimedia data i
 
 [Download paper here](https://doi.org/10.1109/SCEECS.2012.6184847)
 
-Recommended citation: M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students Conference on Electrical Electronics and Computer Science</i>, Bhopal, India, pp. 1-4.
+Recommended citation: M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students Conference on Electrical Electronics and Computer Science (SCEECS)</i>, Bhopal, India, pp. 1-4.
