publication in 1900 bug fix

--- a/_publications/IEEE2012.md
+++ b/_publications/IEEE2012.md
@@ -3,9 +3,8 @@ title: "Variable scaling factor based invisible image watermarking using hybrid 
 collection: publications
 permalink: /publication/IEEE2012
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
-date: 2012-03-01
-#venue: '2012 IEEE Students Conference on Electrical Electronics and Computer Science (SCEECS), Bhopal, India'
-venue: '2012 SCEECS'
+date: 2013-03-01
+venue: '2012 IEEE Students Conference on Electrical Electronics and Computer Science (SCEECS), Bhopal, India'
 # paperurl: 'https://doi.org/10.1109/SCEECS.2012.6184847'
 # citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal of Materials Research</i>. 1(2).'
 citation: 'M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students' Conference on Electrical, Electronics and Computer Science</i>, Bhopal, India, pp. 1-4.'
