publication in 1900 bug fix

--- a/_publications/IEEE2011.md
+++ b/_publications/IEEE2011.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/IEEE2011
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2011-12-16
-venue: '2011 IEEE International Conference on Computational Intelligence and Computing Research (ICCIC), Levengipuram - Kanyakumari, India'
+venue: "2011 IEEE International Conference on Computational Intelligence and Computing Research (ICCIC), Levengipuram - Kanyakumari, India"
 # paperurl: 'https://doi.org/10.1109/SCEECS.2012.6184847'
 # citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal of Materials Research</i>. 1(2).'
 citation: 'M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2011), &quot;Computational Analysis of Variable Scaling Factor based Invisible Image Watermarking using Hybrid SVD - DCT Compression - Decompression Technique&quot;, <i>In 2011 IEEE International Conference on Computational Intelligence and Computing Research (ICCIC)</i>, Levengipuram - Kanyakumari, India.'
