publication in 1900 bug fix

--- a/_publications/EMAG2015.md
+++ b/_publications/EMAG2015.md
@@ -2,7 +2,7 @@
 title: "Development of automated background subtraction technique for electron energy-loss spectroscopy"
 collection: publications
 permalink: /publication/EMAG2015
-# excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
+excerpt: 'Development of automated background subtraction technique for electron energy-loss spectroscopy'
 date: 2015-07-02
 venue: '2015 Electron Microscopy and Analysis Group Conference, Manchester, UK'
 # paperurl: 'http://dx.doi.org/10.13140/RG.2.1.2972.0566'
