--- a/_publications/EMAG2016.md
+++ b/_publications/EMAG2016.md
@@ -2,7 +2,7 @@
 title: "Systematic study of background subtraction techniques for EELS"
 collection: publications
 permalink: /publication/EMAG2016
-# excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
+excerpt: 'Systematic study of background subtraction techniques for EELS.'
 date: 2016-07-02
 venue: '2016 Electron Microscopy and Analysis Group Conference, Durham, UK'
 # paperurl: 'http://dx.doi.org/10.13140/RG.2.1.4020.6320'
