--- a/_publications/IEEE2012.md
+++ b/_publications/IEEE2012.md
@@ -2,7 +2,7 @@
 title: "Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique"
 collection: publications
 permalink: /publication/IEEE2012
-# excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
+excerpt: 'Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique.'
 date: 2013-03-01
 venue: '2012 IEEE Students Conference on Electrical Electronics and Computer Science (SCEECS), Bhopal, India'
 # paperurl: 'https://doi.org/10.1109/SCEECS.2012.6184847'
