--- a/_publications/EMC2016.md
+++ b/_publications/EMC2016.md
@@ -2,7 +2,7 @@
 title: "Influence of background subtraction and deconvolution on calculation of EELS core‐loss intensities"
 collection: publications
 permalink: /publication/EMC2016
-# excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
+excerpt: 'Influence of background subtraction and deconvolution on calculation of EELS core‐loss intensities.'
 date: 2016-12-20
 venue: '2016 European Microscopy Congress, Lyon, France'
 # paperurl: 'https://doi.org/10.1002/9783527808465.EMC2016.6237'
