--- a/_publications/APL2017.md
+++ b/_publications/APL2017.md
@@ -2,7 +2,7 @@
 title: "Evidence of terbium and oxygen co-segregation in annealed AlN:Tb"
 collection: publications
 permalink: /publication/APL2017
-excerpt: 'Evidence of terbium and oxygen co-segregation in annealed AlN:Tb'
+excerpt: 'Evidence of terbium and oxygen co-segregation in annealed AlN:Tb.'
 date: 2017-05-29
 venue: 'Applied Physics Letters'
 # paperurl: 'https://doi.org/10.1063/1.4984237'
