--- a/_publications/ZWF2020.md
+++ b/_publications/ZWF2020.md
@@ -1,7 +1,7 @@
 ---
 title: "Predictive Maintenance – When the Digital Shadow reaches limitations"
 collection: publications
-permalink: /publication/AMEST2020
+permalink: /publication/ZWF2020
 excerpt: 'Harmonization of data-driven and physics-based models for predictive maintenance.'
 date: 2020-03-11
 venue: 'ZWF - Magazine'
