--- a/_publications/ZWF2020.md
+++ b/_publications/ZWF2020.md
@@ -7,10 +7,10 @@ date: 2020-03-11
 venue: 'ZWF - Magazine'
 # paperurl: 'https://doi.org/10.1063/1.4984237'
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
-citation: 'A. Werner, <b>V. C. Angadi</b>, J. Lentes  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;, <i>In ZWF - Magazine</i>, Germany.'
+citation: 'A. Werner, <b>V. C. Angadi</b>, J. Lentes  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;, <i> ZWF - Magazine</i>, Germany.'
 ---
 <i>Submitted</i>
 
 Conference website [ZWF 2020](https://www.hanser-elibrary.com/loi/zwf)
 
-Recommended citation: A. Werner, <b>V. C. Angadi</b>, J. Lentes  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;, <i>In ZWF - Magazine</i>, Germany.
+Recommended citation: A. Werner, <b>V. C. Angadi</b>, J. Lentes  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;, <i> ZWF - Magazine</i>, Germany.
