Update ZWF 2020 status to published

--- a/_publications/ZWF2020.md
+++ b/_publications/ZWF2020.md
@@ -1,16 +1,16 @@
 ---
-title: "Predictive Maintenance – When the Digital Shadow reaches limitations"
+title: "Predictive Maintenance: When the Digital Shadow Reaches its Limits"
 collection: publications
 permalink: /publication/ZWF2020
 excerpt: 'Harmonization of data-driven and physics-based models for predictive maintenance.'
-date: 2020-03-11
-venue: 'ZWF - Magazine'
-# paperurl: 'https://doi.org/10.1063/1.4984237'
+date: 2020-05-11
+venue: 'ZWF Zeitschrift für wirtschaftlichen Fabrikbetrieb'
+# paperurl: 'https://doi.org/10.3139/104.112295'
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
-citation: 'A. Werner, <b>V. C. Angadi</b>, J. Lentes  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;, <i> ZWF - Magazine</i>, Germany.'
+citation: 'A. Werner, <b>V. C. Angadi</b>, J. Lentes and A. Mousavi  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;,<i> ZWF Zeitschrift für wirtschaftlichen Fabrikbetrieb</i>, 115(5), pp. 335-339.'
 ---
-<i>Submitted</i>
+Harmonization of data-driven and physics-based models for predictive maintenance. Data-driven models for the analysis of production systems are becoming increasingly important in industry. The main advantages of their use are that the generation of Digital Shadows is only based on measured sensor data and existing data interfaces and analysis methods can be used for predictions. However, data-driven approaches have their limits, as they only extrapolate trends from past events. Relevant data on failure scenarios that have not occurred in reality are often missing. Therefore, there is a need for Digital Twins for analysis purposes, which combine data-driven and physics-based models to enable representative predictive statements such as the Remaining Useful life of machine components. In the EU-funded project Z-BRE4K, approaches to harmonize data-driven and physics-based models for predictive maintenance are researched, developed and tested together with industrial users. These approaches are presented in this paper.
 
-Conference website [ZWF 2020](https://www.hanser-elibrary.com/loi/zwf)
+[Download paper here](https://doi.org/10.3139/104.112295)
 
-Recommended citation: A. Werner, <b>V. C. Angadi</b>, J. Lentes  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;,<i> ZWF - Magazine</i>, Germany.
+Recommended citation: A. Werner, <b>V. C. Angadi</b>, J. Lentes and A. Mousavi  (2020), &quot;Predictive Maintenance – When the Digital Shadow reaches limitations&quot;,<i> ZWF Zeitschrift für wirtschaftlichen Fabrikbetrieb</i>, 115(5), pp. 335-339.
