--- a/_publications/FAIM2020.md
+++ b/_publications/FAIM2020.md
@@ -3,14 +3,14 @@ title: "Regressive Event-Tracker: A Causal Prediction Modelling of Degradation i
 collection: publications
 permalink: /publication/FAIM2020
 excerpt: 'Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing.'
-date: 2020-02-21
+date: 2020-05-31
 venue: '30th International Conference on Flexible Automation and Intelligent Manufacturing, Athens, Greece'
 # paperurl: 'https://doi.org/10.1063/1.4984237'
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
-citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Fazziani, M. Tellarini (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.'
+citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fazziani  (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.'
 ---
-<i>Submitted</i>
+<i>In Press</i>
 
-Conference website [FAIM 2020](https://www.faimconference.org/)
+Conference website [FAIM 2020/2021](https://www.faimconference.org/)
 
-Recommended citation: <b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Fazziani, M. Tellarini (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.
+Recommended citation: <b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fazziani (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.
