rename AMEST2020 date

--- a/_publications/2020-02-28-AMEST2020.md
+++ b/_publications/2020-02-28-AMEST2020.md
@@ -1,7 +1,7 @@
 ---
 title: "Causal Modelling for Predicting Machine Tools Degradation in High Speed Production Process"
 collection: publications
-permalink: /publication/AMEST2020
+permalink: /publication/2020-02-28-AMEST2020
 excerpt: 'Causal Modelling for Predicting Machine Tools Degradation in High Speed Production Process.'
 date: 2020-02-28
 venue: '4th IFAC Workshop on Advanced Maintenance Engineering, Services and Technologies, Cambridge, UK'
