--- a/_publications/2020-05-24-APARM2020.md
+++ b/_publications/2020-05-24-APARM2020.md
@@ -1,7 +1,7 @@
 ---
 title: "A PdM framework Through the Event-based Genomics of Machine Breakdown"
 collection: publications
-permalink: /publication/APARM2020
+permalink: /publication/2020-05-24-APARM2020
 excerpt: 'A PdM framework Through the Event-based Genomics of Machine Breakdown.'
 date: 2020-05-24
 venue: 'The 9th Asia-Pacific International Symposium on Advanced Reliability and Maintenance Modelling, Vancouver, Canada'
