--- a/_publications/2017-05-29-APL2017.md
+++ b/_publications/2017-05-29-APL2017.md
@@ -1,7 +1,7 @@
 ---
 title: "Evidence of terbium and oxygen co-segregation in annealed AlN:Tb"
 collection: publications
-permalink: /publication/APL2017
+permalink: /publication/2017-05-29-APL2017
 excerpt: 'Evidence of terbium and oxygen co-segregation in annealed AlN:Tb.'
 date: 2017-05-29
 venue: 'Applied Physics Letters'
