--- a/_publications/2015-07-02-EMAG2015.md
+++ b/_publications/2015-07-02-EMAG2015.md
@@ -1,7 +1,7 @@
 ---
 title: "Development of automated background subtraction technique for electron energy-loss spectroscopy"
 collection: publications
-permalink: /publication/EMAG2015
+permalink: /publication/2015-07-02-EMAG2015
 excerpt: 'Development of automated background subtraction technique for electron energy-loss spectroscopy'
 date: 2015-07-02
 venue: '2015 Electron Microscopy and Analysis Group Conference, Manchester, UK'
