--- a/_publications/2016-07-02-EMAG2016.md
+++ b/_publications/2016-07-02-EMAG2016.md
@@ -1,7 +1,7 @@
 ---
 title: "Systematic study of background subtraction techniques for EELS"
 collection: publications
-permalink: /publication/EMAG2016
+permalink: /publication/2016-07-02-EMAG2016
 excerpt: 'Systematic study of background subtraction techniques for EELS.'
 date: 2016-07-02
 venue: '2016 Electron Microscopy and Analysis Group Conference, Durham, UK'
