--- a/_publications/2016-12-20-EMC2016.md
+++ b/_publications/2016-12-20-EMC2016.md
@@ -1,7 +1,7 @@
 ---
 title: "Influence of background subtraction and deconvolution on calculation of EELS core‐loss intensities"
 collection: publications
-permalink: /publication/EMC2016
+permalink: /publication/2016-12-20-EMC2016
 excerpt: 'Influence of background subtraction and deconvolution on calculation of EELS core‐loss intensities.'
 date: 2016-12-20
 venue: '2016 European Microscopy Congress, Lyon, France'
