--- a/_publications/2020-05-31-FAIM2021.md
+++ b/_publications/2020-05-31-FAIM2021.md
@@ -1,7 +1,7 @@
 ---
 title: "Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing"
 collection: publications
-permalink: /publication/FAIM2020
+permalink: /publication/2020-05-31-FAIM2021
 excerpt: 'Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing.'
 date: 2020-05-31
 venue: '30th International Conference on Flexible Automation and Intelligent Manufacturing, Athens, Greece'
