--- a/_publications/2014-10-14-HSI2014.md
+++ b/_publications/2014-10-14-HSI2014.md
@@ -1,7 +1,7 @@
 ---
 title: "Core-Loss Edge Detection and Background Subtraction Techniques for EELS"
 collection: publications
-permalink: /publication/HSI2014
+permalink: /publication/2014-10-14-HSI2014
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2014-10-14
 venue: '2014 Hyperspectral Imaging and Applications Conference, Coventry, UK'
