--- a/_publications/2018-11-10-ICSAI2018.md
+++ b/_publications/2018-11-10-ICSAI2018.md
@@ -1,7 +1,7 @@
 ---
 title: "Zero Defect Manufacturing of Microsemiconductors–An Application of Machine Learning and Artificial Intelligence"
 collection: publications
-permalink: /publication/ICSAI2018
+permalink: /publication/2018-11-10-ICSAI2018
 # excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2018-11-10
 venue: '2018 5th International Conference on Systems and Informatics (ICSAI), Nanjing, China'
