--- a/_publications/2011-12-16-IEEE2011.md
+++ b/_publications/2011-12-16-IEEE2011.md
@@ -1,7 +1,7 @@
 ---
 title: "Computational Analysis of Variable Scaling Factor based Invisible Image Watermarking using Hybrid SVD - DCT Compression - Decompression Technique"
 collection: publications
-permalink: /publication/IEEE2011
+permalink: /publication/2011-12-16-IEEE2011
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2011-12-16
 venue: '2011 IEEE International Conference on Computational Intelligence and Computing Research (ICCIC), Levengipuram - Kanyakumari, India'
