--- a/_publications/2016-03-21-JMI2016.md
+++ b/_publications/2016-03-21-JMI2016.md
@@ -1,7 +1,7 @@
 ---
 title: "Automated Background Subtraction Technique for Electron Energy‐loss Spectroscopy and Application to Semiconductor Heterostructures"
 collection: publications
-permalink: /publication/JMI2016
+permalink: /publication/2016-03-21-JMI2016
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2016-03-21
 venue: 'Journal of Microscopy'
