--- a/_publications/2017-03-14-JMR2017.md
+++ b/_publications/2017-03-14-JMR2017.md
@@ -1,7 +1,7 @@
 ---
 title: "Study of phase separation in an InGaN alloy by electron energy loss spectroscopy in an aberration corrected monochromated scanning transmission electron microscope"
 collection: publications
-permalink: /publication/JMR2017
+permalink: /publication/2017-03-14-JMR2017
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2017-03-14
 venue: 'Journal of Materials Research'
