--- a/_publications/2015-03-29-MSM2015.md
+++ b/_publications/2015-03-29-MSM2015.md
@@ -1,7 +1,7 @@
 ---
 title: "Automated background subtraction for electron energy-loss spectroscopy and application to spectral imaging of semiconductor layers"
 collection: publications
-permalink: /publication/MSM2015
+permalink: /publication/2015-03-29-MSM2015
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2015-03-29
 venue: '2015 19th Microscopy of Semiconducting Materials, Cambridge, UK'
