--- a/_publications/2017-04-09-MSM2017.md
+++ b/_publications/2017-04-09-MSM2017.md
@@ -1,7 +1,7 @@
 ---
 title: "Determination of bandgap onset by blind deconvolution of electron energy-loss spectra (EELS): 1D EELS vs 2D EEL spectrum images"
 collection: publications
-permalink: /publication/MSM2017
+permalink: /publication/2017-04-09-MSM2017
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2017-04-09
 venue: '2017 20th Microscopy of Semiconducting Materials, Oxford, UK'
