--- a/_publications/2020-05-11-ZWF2020.md
+++ b/_publications/2020-05-11-ZWF2020.md
@@ -1,7 +1,7 @@
 ---
 title: "Predictive Maintenance: When the Digital Shadow Reaches its Limits"
 collection: publications
-permalink: /publication/ZWF2020
+permalink: /publication/2020-05-11-ZWF2020
 excerpt: 'Harmonization of data-driven and physics-based models for predictive maintenance.'
 date: 2020-05-11
 venue: 'ZWF Zeitschrift für wirtschaftlichen Fabrikbetrieb'
