--- a/_publications/2013-03-01-IEEE2012.md
+++ b/_publications/2013-03-01-IEEE2012.md
@@ -7,10 +7,10 @@ date: 2013-03-01
 venue: '2012 IEEE Students Conference on Electrical Electronics and Computer Science (SCEECS), Bhopal, India'
 # paperurl: 'https://doi.org/10.1109/SCEECS.2012.6184847'
 # citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal of Materials Research</i>. 1(2).'
-citation: 'M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students Conference on Electrical, Electronics and Computer Science</i>, Bhopal, India, pp. 1-4.'
+citation: 'M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students&rsquo; Conference on Electrical, Electronics and Computer Science</i>, Bhopal, India, pp. 1-4.'
 ---
 Watermarking is a technique of embedding hidden information in multimedia data imperceptibly, such as image, video, audio and text data. Generally, an original image is transformed and coded watermark image data is embedded in frequency domain watermarking models. The proposed work explores the computational analysis of variable scaling factor (α) based invisible image watermarking process using the combination of Singular Value Decomposition (SVD) and Discrete Wavelet Transform (DWT) algorithms. The performance analysis of such an invisible image watermarking system is measured using percentage Compression Ratio (%CR), Peak Signal to Noise Ratio (PSNR), with respect to the embedded and extracted images correspondingly. The algorithms thus developed may find applications in copyright identification, finger printing, transaction tracking, content authentication, device control to name a few.
 
 [Download paper here](https://doi.org/10.1109/SCEECS.2012.6184847)
 
-Recommended citation: M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students Conference on Electrical Electronics and Computer Science (SCEECS)</i>, Bhopal, India, pp. 1-4.
+Recommended citation: M. M. Dixit, P. K. Kulkarni, P. S. Somasagar and <b>V. C. Angadi</b> (2012), &quot;Variable scaling factor based invisible image watermarking using hybrid DWT - SVD compression - decompression technique&quot;, <i>In 2012 IEEE Students&rsquo; Conference on Electrical Electronics and Computer Science (SCEECS)</i>, Bhopal, India, pp. 1-4.
