Update files AMEST2020, APARM2020 & FAIM2021

--- a/_publications/2020-07-15-APARM2020.md
+++ b/_publications/2020-07-15-APARM2020.md
@@ -11,6 +11,7 @@ citation: 'M. Danishvar, <b>V. C. Angadi</b> and A. Mousavi (2020), &quot;A PdM 
 ---
 <i>In Press</i>
 
-Conference website [APARM 2020](http://www.aparm2020.org/)
+[Download paper here](https://vcangadi1.github.io/files/APARM2020)
+
 
 Recommended citation: M. Danishvar, <b>V. C. Angadi</b> and A. Mousavi (2020), &quot;A PdM framework Through the Event-based Genomics of Machine Breakdown&quot;, <i>In The 9th Asia-Pacific International Symposium on Advanced Reliability and Maintenance Modelling </i>, Vancouver, Canada.
