--- a/_publications/2020-07-07-FAIM2021.md
+++ b/_publications/2020-07-07-FAIM2021.md
@@ -11,6 +11,6 @@ citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fa
 ---
 <i>In Press</i>
 
-Conference website [FAIM 2020/2021](https://www.faimconference.org/)
+[Download paper here](https://vcangadi1.github.io/files/FAIM2021)
 
 Recommended citation: <b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fazziani (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.
