--- a/_publications/2020-02-28-AMEST2020.md
+++ b/_publications/2020-02-28-AMEST2020.md
@@ -11,6 +11,6 @@ citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini, M. Fazzi
 ---
 A dynamic health indicator based on regressive event-tracker algorithm is proposed to accurately interpret the condition of critical components of machine tools in a production system and to predict their potential sudden breakdown based on future trends. Through sensors/actuators data acquisition, the algorithm predicts the causal links between various monitored parameters of the system and offers a diagnosis of the health state of the system. A safety and operational robustness regime determines the acceptable thresholds of the operational boundaries of the electro-mechanical components of the machines. The proposed model takes into account the possibilities of sensor values being a piecewise-linear models or a pair of exponential functions with restricted model parameters, which can predict the runs-to-failure or remaining useful life until a safety threshold. The events caused by sensors passing through sub levels of safety threshold are used as a re-enforcement learning for the models. Each remaining useful life estimation diagnosis and prognosis analysis can be conducted on individual or an interconnected network of components within a machine. The overall health indicator based on individual useful life estimation is calculated by deriving the weights from event-clustering algorithm. The work can be extended to a network of machines representing a process. The outcome of the continuously learning real-time condition monitoring modus-operandi is to accurately measure the remaining useful life of the network of critical components of a machine.
 
-[Download paper here](https://vcangadi1.github.io/files/AMEST2020)
+[Download paper here](https://vcangadi1.github.io/files/AMEST2020.pdf)
 
 Recommended citation: <b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini, M. Fazziani (2020), &quot;Causal Modelling for Predicting Machine Tools Degradation in High Speed Production Process&quot;, <i>In 4th IFAC Workshop on Advanced Maintenance Engineering, Services and Technologies</i>, Cambridge, UK.
