--- a/_publications/2020-07-07-FAIM2021.md
+++ b/_publications/2020-07-07-FAIM2021.md
@@ -9,7 +9,8 @@ venue: '30th International Conference on Flexible Automation and Intelligent Man
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
 citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fazziani  (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.'
 ---
-<i>In Press</i>
+
+The proposed work describes a dynamic regression based event-tracker for high speed production process. The methodology discussed is a causal system and provides trends and estimations of the sensors based on a flexible regression model of the historical sensor values. A safety threshold is defined that provides a boundary of the tolerant working for the regime condition of production. This threshold is used as a reference to calculate the remaining useful life of the critical component. The estimated remaining useful life is compared with the Weibull reliability analysis. The proposed methodology provides a remaining useful life of ~10 weeks for the thermal regulator use-case when compared to ~9 weeks for Weibull analysis. The overestimation of the methodology is discussed and along with the alternative methodology. The sensitivity analysis is conducted on the noise and training periods are studied for better prediction.
 
 [Download paper here](https://vcangadi1.github.io/files/FAIM2021.pdf)
 
