--- a/_publications/2015-03-29-MSM2015.md
+++ b/_publications/2015-03-29-MSM2015.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2015-03-29-MSM2015
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2015-03-29
-venue: '2015 19th Microscopy of Semiconducting Materials, Cambridge, UK'
+venue: '2015 19<sup>th</sup> Microscopy of Semiconducting Materials, Cambridge, UK'
 # paperurl: 'http://dx.doi.org/10.13140/2.1.3508.3044'
 # citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal of Materials Research</i>. 1(2).'
 citation: '<b>V. C. Angadi</b>, T. Walther and C. Abhayaratne (2015), &quot;Automated background subtraction for electron energy-loss spectroscopy and application to spectral imaging of semiconductor layers&quot;, <i>In 2015 19th Microscopy of Semiconducting Materials</i>, Cambridge, UK.'
