--- a/_publications/2020-02-28-AMEST2020.md
+++ b/_publications/2020-02-28-AMEST2020.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2020-02-28-AMEST2020
 excerpt: 'Causal Modelling for Predicting Machine Tools Degradation in High Speed Production Process.'
 date: 2020-02-28
-venue: '4th IFAC Workshop on Advanced Maintenance Engineering, Services and Technologies, Cambridge, UK'
+venue: '4<sup>th</sup> IFAC Workshop on Advanced Maintenance Engineering, Services and Technologies, Cambridge, UK'
 # paperurl: 'https://doi.org/10.1063/1.4984237'
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
 citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini, M. Fazziani (2020), &quot;Causal Modelling for Predicting Machine Tools Degradation in High Speed Production Process&quot;, <i>In 4th IFAC Workshop on Advanced Maintenance Engineering, Services and Technologies</i>, Cambridge, UK.'
