--- a/_publications/2020-07-07-FAIM2021.md
+++ b/_publications/2020-07-07-FAIM2021.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2020-05-31-FAIM2021
 excerpt: 'Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing.'
 date: 2020-07-07
-venue: '30th International Conference on Flexible Automation and Intelligent Manufacturing, Athens, Greece'
+venue: '30<sup>th</sup> International Conference on Flexible Automation and Intelligent Manufacturing, Athens, Greece'
 # paperurl: 'https://doi.org/10.1063/1.4984237'
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
 citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fazziani  (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.'
