--- a/_publications/2017-05-29-APL2017.md
+++ b/_publications/2017-05-29-APL2017.md
@@ -9,8 +9,7 @@ venue: 'Applied Physics Letters'
 # citation: 'Your Name, You. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
 citation: '<b>V. C. Angadi</b>, F. Benz, I. Tischer, K. Thonke, T. Aoki and T. Walther (2017), &quot;Evidence of terbium and oxygen co-segregation in annealed AlN: Tb&quot; <i>Applied Physics Letters</i>, 110(22), pp. 222102.'
 ---
-Analytical scanning transmission electron microscopy (STEM) has been applied to study aluminium nitride (AlN) doped with terbium (Tb) and annealed at 800◦C. Correlation of the
-maps of Tb and oxygen (O) from electron energy-loss spectrum (EELS) imaging proves that these two elements co-segregate, replacing aluminium (Al) and nitrogen (N) atoms, respectively. This agrees well with modelling which predicted the existence of Tb−O complexes needed to fit all lines in the rather complicated cathodoluminescence (CL) emission spectrum of the sample.
+Analytical scanning transmission electron microscopy (STEM) has been applied to study aluminium nitride (AlN) doped with terbium (Tb) and annealed at 800◦C. Correlation of the maps of Tb and oxygen (O) from electron energy-loss spectrum (EELS) imaging proves that these two elements co-segregate, replacing aluminium (Al) and nitrogen (N) atoms, respectively. This agrees well with modelling which predicted the existence of Tb−O complexes needed to fit all lines in the rather complicated cathodoluminescence (CL) emission spectrum of the sample.
 
 [Download paper here](https://doi.org/10.1063/1.4984237)
 
