rename FAIM2021 and published

--- a/_publications/2020-11-19-FAIM2021.md
+++ b/_publications/2020-11-19-FAIM2021.md
@@ -1,7 +1,7 @@
 ---
 title: "Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing"
 collection: publications
-permalink: /publication/2021-06-15-FAIM2021
+permalink: /publication/2020-11-19-FAIM2021
 excerpt: 'Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing.'
 date: 2021-06-15
 venue: '30<sup>th</sup> International Conference on Flexible Automation and Intelligent Manufacturing, Athens, Greece'
@@ -11,6 +11,6 @@ citation: '<b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fa
 ---
 The proposed work describes a dynamic regression based event-tracker for high speed production process. The methodology discussed is a causal system and provides trends and estimations of the sensors based on a flexible regression model of the historical sensor values. A safety threshold is defined that provides a boundary of the tolerant working for the regime condition of production. This threshold is used as a reference to calculate the remaining useful life of the critical component. The estimated remaining useful life is compared with the Weibull reliability analysis. The proposed methodology provides a remaining useful life of ~10 weeks for the thermal regulator use-case when compared to ~9 weeks for Weibull analysis. The overestimation of the methodology is discussed and along with the alternative methodology. The sensitivity analysis is conducted on the noise and training periods are studied for better prediction.
 
-[Download paper here](https://vcangadi1.github.io/files/FAIM2021.pdf)
+[Download paper here](https://doi.org/10.1016/j.promfg.2020.10.218)
 
 Recommended citation: <b>V. C. Angadi</b>, A. Mousavi, D. Bartolome, M. Tellarini and M. Fazziani (2020), &quot;Regressive Event-Tracker: A Causal Prediction Modelling of Degradation in High Speed Manufacturing&quot;, <i>In 30th International Conference on Flexible Automation and Intelligent Manufacturing</i>, Athens, Greece.
